--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==1.0.0
+click==6.7
+Flask==1.0
+gunicorn==19.9.0
+itsdangerous==0.24
 Jinja2==2.10.1
 MarkupSafe==1.0
 Werkzeug==0.15.3
-click==6.7
-itsdangerous==0.24
